--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
+    "typeorm": "^0.3.26",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
