--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@iconify/react": "^6.0.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
     "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.0",
@@ -29,10 +32,13 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^6.3.5"
