--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@iconify/react": "^6.0.0",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.12",
     "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
